# eecs583-final-project

./: .gitignore  CMakeLists.txt
LoopPerforationPass/: CMakeLists.txt  LoopPerforationPass.cpp
benchmarks/: compress.c  example.c  run.sh  simple.c
benchmarks/alloc-loop/: alloc-loop.c
benchmarks/sum-to-n/: sum-to-n.c
